--- a/Vagrantfile.example
+++ b/Vagrantfile.example
@@ -10,7 +10,7 @@ if settings.key?(:hardware)
   cpus = settings[:hardware][:cpus]
   memory = settings[:hardware][:memory]
 else
-  cpus = 1
+  cpus = 2
   memory = 4096
 end
 
@@ -67,6 +67,8 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
 
   config.vm.provision :chef_solo do |chef|
     chef.cookbooks_path = ["kitchen/cookbooks", "kitchen/site-cookbooks"]
+    chef.verbose_logging = true
+    # chef.log_level = "debug"
 
     # custom JSON attributes:
     chef.json = {
@@ -74,6 +76,12 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
         "install_flavor" => "oracle",
         "jdk_version" => "8",
         "oracle" => {"accept_oracle_download_terms" => true}
+      },
+      "elasticsearch" => {
+        "allocated_memory"=> "1024m",
+        "cluster"=> {"name"=> "answers"},
+        "custom_config"=> {"script.disable_dynamic"=> true},
+        "version"=> "1.3.4"
       },
       "postgresql" => {
         "version" => "9.3",
@@ -85,7 +93,7 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
           "log_min_error_statement" => "info",
           "log_min_duration_statement" => "0"
         },
-        "pg_hba" =>[
+        "pg_hba" => [
           { "type" => "local", "db" => "all", "user" => "postgres", "addr" => nil, "method" => "ident"},
           { "type" => "local", "db" => "all", "user" => "all", "addr" => nil, "method" => "ident"},
           { "type" => "host", "db" => "all", "user" => "all", "addr" => "0.0.0.0/0", "method" => "md5"},
@@ -93,21 +101,19 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
           { "type" => "local", "db" => "all", "user" => "all", "addr" => nil, "method" => "ident"},
         ],
       },
-      "rvm" => {"default_ruby" => "ruby-2.1.2"},
-
-      "elasticsearch"=> {
-        "allocated_memory"=> "1024m",
-        "cluster"=> {"name"=> "answers"},
-        "custom_config"=> {"script.disable_dynamic"=> true},
-        "version"=> "1.3.0"
+      "rvm" => {
+        "default_ruby" => "ruby-2.1.3",
+        "global_gems" => [
+          { "name" => "bundler" },
+          { "name" => "rails", "version" => "4.1.6" }
+        ]
       }
     }
 
     chef.add_recipe "apt"
     chef.add_recipe "build-essential"
-    chef.add_recipe "elasticsearch"
+    chef.add_recipe "curl"
     chef.add_recipe "git"
-    chef.add_recipe "java"
     chef.add_recipe "libqt4::dev"
     chef.add_recipe "libreoffice"
     chef.add_recipe "libsasl2_dev"
@@ -124,5 +130,8 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
     chef.add_recipe "rvm::vagrant"
     chef.add_recipe "wordnet"
     chef.add_recipe "yum"
+    chef.add_recipe "java"
+    chef.add_recipe "java::default_java_symlink"
+    chef.add_recipe "elasticsearch"
   end
 end
