--- a/Vagrantfile.example
+++ b/Vagrantfile.example
@@ -133,5 +133,6 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
     chef.add_recipe "java"
     chef.add_recipe "java::default_java_symlink"
     chef.add_recipe "elasticsearch"
+    chef.add_recipe "pdftk"
   end
 end
