--- a/Vagrantfile.example
+++ b/Vagrantfile.example
@@ -60,7 +60,7 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
     vb.customize ["modifyvm", :id, "--natdnshostresolver1", "on"]
   end
 
-  config.omnibus.chef_version = :latest
+  config.omnibus.chef_version = "11.16.4"
 
   # Enable provisioning with chef solo, specifying a cookbooks path, roles
   # path, and data_bags path (all relative to this Vagrantfile), and adding
@@ -103,7 +103,7 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
         ],
       },
       "rvm" => {
-        "default_ruby" => "ruby-2.1.3",
+        "default_ruby" => "ruby-2.1.5",
         "global_gems" => [
           { "name" => "bundler" },
           { "name" => "rails", "version" => "4.1.6" }
