--- a/Vagrantfile.example
+++ b/Vagrantfile.example
@@ -73,6 +73,9 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
 
     # custom JSON attributes:
     chef.json = {
+      "apt" => {
+        "compile_time_update" => true
+      },
       "java" => {
         "install_flavor" => "oracle",
         "jdk_version" => "8",
