--- a/Vagrantfile.example
+++ b/Vagrantfile.example
@@ -118,6 +118,7 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
     chef.add_recipe "build-essential"
     chef.add_recipe "curl"
     chef.add_recipe "git"
+    chef.add_recipe "imagemagick"
     chef.add_recipe "libqt4::dev"
     chef.add_recipe "libreoffice"
     chef.add_recipe "libsasl2_dev"
