--- a/Vagrantfile.example
+++ b/Vagrantfile.example
@@ -60,7 +60,7 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
     vb.customize ["modifyvm", :id, "--natdnshostresolver1", "on"]
   end
 
-  config.omnibus.chef_version = "11.16.4"
+  config.omnibus.chef_version = :latest
 
   # Enable provisioning with chef solo, specifying a cookbooks path, roles
   # path, and data_bags path (all relative to this Vagrantfile), and adding
@@ -87,6 +87,13 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
         "custom_config"=> {"script.disable_dynamic"=> true},
         "version"=> "1.3.4"
       },
+      "nodejs": {
+        "npm_packages": [
+          {
+            "name": "gulp"
+          }
+        ]
+      }
       "postgresql" => {
         "version" => "9.3",
         "apt_distribution" => "trusty",
@@ -106,7 +113,7 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
         ],
       },
       "rvm" => {
-        "default_ruby" => "ruby-2.1.5",
+        "default_ruby" => "ruby-2.1.6",
         "global_gems" => [
           { "name" => "bundler" },
           { "name" => "rails", "version" => "4.1.9" }
