--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,8 @@ coverage
 pkg
 */tags
 *~
-
+.tag*
+.idea/
 # you should check in your Gemfile.lock in applications, and not in gems
 Gemfile.lock
 Gemfile.local
