--- a/Vagrantfile.example
+++ b/Vagrantfile.example
@@ -138,5 +138,6 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
     chef.add_recipe "java::default_java_symlink"
     chef.add_recipe "elasticsearch"
     chef.add_recipe "pdftk"
+    chef.add_recipe "freetds"
   end
 end
