--- a/kitchen/cookbooks/postgresql/Rakefile
+++ b/kitchen/cookbooks/postgresql/Rakefile
@@ -4,14 +4,7 @@ desc "Run all tests except `kitchen`"
 task test: [:rubocop, :foodcritic, :chefspec]
 
 desc "Run all tests"
-task all_tests: [
-  :license_finder, :rubocop, :foodcritic, :chefspec, "kitchen:all"
-]
-
-# license finder
-task :license_finder do
-  sh "bundle exec license_finder --quiet"
-end
+task all_tests: [:rubocop, :foodcritic, :chefspec, "kitchen:all"]
 
 # rubocop style checker
 require "rubocop/rake_task"
