--- a/Vagrantfile.example
+++ b/Vagrantfile.example
@@ -152,5 +152,7 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
     chef.add_recipe "xvfb"
     chef.add_recipe "chrome"
     chef.add_recipe "sauce_labs"
+    chef.add_recipe "redisio"
+    chef.add_recipe "redisio::enable"
   end
 end
