--- a/Vagrantfile.example
+++ b/Vagrantfile.example
@@ -14,6 +14,12 @@ else
   memory = 6000
 end
 
+if settings.key?(:proxy)
+  proxy = settings[:proxy]
+else
+  raise('please set proxy settings in vagrant.yml http://some-url:80')
+end
+
 VAGRANTFILE_API_VERSION = "2"
 
 Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
@@ -26,12 +32,11 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
   if !Vagrant.has_plugin?("vagrant-omnibus")
     system('vagrant plugin install vagrant-omnibus')
 
-   raise("vagrant-proxyconf installed. Run command again.");
+   raise("vagrant-omnibus installed. Run command again.");
   end
 
- # GET PRE PROXY URL FROM TEAM MEMBER
- config.proxy.http     = "http://PRE-PROXY-URL:80"
- config.proxy.https    = "http://PRE-PROXY-URL:80"
+ config.proxy.http = proxy
+ config.proxy.https = proxy
 
   # Ubuntu 14.04
   config.vm.box = "default"
@@ -68,7 +73,7 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
   # the path on the guest to mount the folder. And the optional third
   # argument is a set of non-required options.
 
-  config.vm.synced_folder localpath, guestpath
+  config.vm.synced_folder localpath, guestpath, type: 'nfs'
 
   config.vm.provider :virtualbox do |vb|
     # Use VBoxManage to customize the VM. For example to change memory:
@@ -79,8 +84,7 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
   end
 
   # config.omnibus.chef_version = '12.6.0'
-  # YOU MAY NEED TO DOWNLOAD CHEF AND POINT TO ITS LOCATION
-  # config.omnibus.install_url = '/Users/usrname/Desktop/chef_12.6.0-1_amd64.deb'
+  # config.omnibus.install_url = '/Users/arbailey/Desktop/chef_12.6.0-1_amd64.deb'
   # config.omnibus.chef_version = "12.8.1"
   # config.omnibus.chef_version = :latest
 
@@ -100,6 +104,10 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
     chef.json = {
       "apt" => {
         "compile_time_update" => true
+      },
+      "phantomjs" => {
+        "base_url" => "https://bitbucket.org/ariya/phantomjs/downloads",
+        "version" => '2.1.1'
       },
       "java" => {
         "install_flavor" => "oracle",
@@ -152,7 +160,6 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
     chef.add_recipe "git"
     chef.add_recipe "imagemagick"
     chef.add_recipe "libqt4::dev"
-    chef.add_recipe "libreoffice"
     chef.add_recipe "libsasl2_dev"
     chef.add_recipe "memcached"
     chef.add_recipe "nodejs"
@@ -160,7 +167,7 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
     chef.add_recipe "passenger_nginx"
     chef.add_recipe "phantomjs"
     chef.add_recipe "postgresql::client"
-    chef.add_recipe "postgresql::server"
+    chef.add_recipe "postgresql_local::server"
     chef.add_recipe "python"
     chef.add_recipe "ruby_dev"
     chef.add_recipe "rvm::system"
